feat: Preview dataframe.

--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -109,6 +109,100 @@
     "\n",
     "df_movies, df_ratings = read_data(data_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Data overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Movies table\n",
+      "+--------+--------------------+--------------------+\n",
+      "|movie_id|               title|               genre|\n",
+      "+--------+--------------------+--------------------+\n",
+      "|       8|Edison Kinetoscop...|   Documentary|Short|\n",
+      "|      10|La sortie des usi...|   Documentary|Short|\n",
+      "|      12|The Arrival of a ...|   Documentary|Short|\n",
+      "|      25|The Oxford and Ca...|                null|\n",
+      "|      91|Le manoir du diab...|        Short|Horror|\n",
+      "|     131|Une nuit terrible...| Short|Comedy|Horror|\n",
+      "|     417|A Trip to the Moo...|Short|Action|Adve...|\n",
+      "|     439|The Great Train R...|Short|Action|Crim...|\n",
+      "|     443|Hiawatha, the Mes...|                null|\n",
+      "|     628|The Adventures of...|        Action|Short|\n",
+      "|     833|The Country Docto...|         Short|Drama|\n",
+      "|    1223| Frankenstein (1910)| Short|Horror|Sci-Fi|\n",
+      "|    1740|The Lonedale Oper...| Short|Drama|Romance|\n",
+      "|    2101|    Cleopatra (1912)|       Drama|History|\n",
+      "|    2130|    L'inferno (1911)|Adventure|Drama|F...|\n",
+      "|    2354|Max et Jane veule...|Short|Comedy|Romance|\n",
+      "|    2844|Fantômas - À l'om...|         Crime|Drama|\n",
+      "|    3740|      Cabiria (1914)|Adventure|Drama|H...|\n",
+      "|    3863|Dough and Dynamit...|        Comedy|Short|\n",
+      "|    4099|His Majesty, the ...|Family|Fantasy|Ad...|\n",
+      "+--------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "Ratings table\n",
+      "+-------+--------+------+----------------+\n",
+      "|user_id|movie_id|rating|rating_timestamp|\n",
+      "+-------+--------+------+----------------+\n",
+      "|      1|  114508|     8|      1381006850|\n",
+      "|      2|  499549|     9|      1376753198|\n",
+      "|      2| 1305591|     8|      1376742507|\n",
+      "|      2| 1428538|     1|      1371307089|\n",
+      "|      3|   75314|     1|      1595468524|\n",
+      "|      3|  102926|     9|      1590148016|\n",
+      "|      3|  114369|    10|      1597555347|\n",
+      "|      3|  118715|     8|      1596006798|\n",
+      "|      3|  120737|     8|      1599306720|\n",
+      "|      3|  208092|     5|      1586466072|\n",
+      "|      3|  358273|     9|      1579057827|\n",
+      "|      3|  477348|     6|      1597289003|\n",
+      "|      3|10039344|     5|      1578603053|\n",
+      "|      3| 1051906|     6|      1589924916|\n",
+      "|      3| 1568346|     6|      1597388722|\n",
+      "|      3| 2278388|     8|      1597297732|\n",
+      "|      3| 6199572|     3|      1589482483|\n",
+      "|      3| 6723592|     8|      1599578941|\n",
+      "|      3| 6751668|     9|      1578955697|\n",
+      "|      3| 7131622|     8|      1579559244|\n",
+      "+-------+--------+------+----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def preview_data(df_movies, df_ratings):\n",
+    "    \"\"\"Showing top 20 rows\n",
+    "\n",
+    "    Args:\n",
+    "        df_movies (Dataframe): Movies Dataframe\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Overview of movies table data\n",
+    "    print(\"Movies table\")\n",
+    "    df_movies.show()\n",
+    "\n",
+    "    # Preview data from the ratings table\n",
+    "    print(\"Ratings table\")\n",
+    "    df_ratings.show()\n",
+    "\n",
+    "\n",
+    "preview_data(df_movies, df_ratings)"
+   ]
   }
  ],
  "metadata": {
