--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -203,6 +203,17 @@
     "\n",
     "preview_data(df_movies, df_ratings)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tasks\n",
+    "\n",
+    "### 1. Counts\n",
+    "\n",
+    "- 1.1 How many films are in the database?"
+   ]
   }
  ],
  "metadata": {
