fix: Human-readable notebook version for git use.

--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -214,6 +214,31 @@
     "\n",
     "- 1.1 How many films are in the database?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Safe Notebook versioning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook result.ipynb to python\n",
+      "[NbConvertApp] Writing 2172 bytes to result.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert result.ipynb --to=\"python\""
+   ]
   }
  ],
  "metadata": {
