--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -216,6 +216,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 3:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 37947 movies in the database\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_1_1(df_movies):\n",
+    "    \"\"\"Counting the number of distinct film titles\n",
+    "\n",
+    "    Args:\n",
+    "        df_movies (Dataframe): Movies Dataframe\n",
+    "\n",
+    "    Return:\n",
+    "        int: Number of movies\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return df_movies\\\n",
+    "        .select(\"title\")\\\n",
+    "        .distinct()\\\n",
+    "        .count()\n",
+    "\n",
+    "\n",
+    "result_1_1 = activity_1_1(df_movies)\n",
+    "print(\"There are\", result_1_1, \"movies in the database\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -224,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +280,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 2172 bytes to result.py\n"
+      "[NbConvertApp] Writing 2554 bytes to result.py\n"
      ]
     }
    ],
