--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -267,12 +267,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 1.2 How many different users are in the database?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 9:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 71707 user id in the database\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_1_2(df_ratings):\n",
+    "    \"\"\"Counting the number of distinct user id\n",
+    "\n",
+    "    Args:\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "\n",
+    "    Return:\n",
+    "        int: Number of user id\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return df_ratings\\\n",
+    "        .select(\"user_id\")\\\n",
+    "        .distinct()\\\n",
+    "        .count()\n",
+    "\n",
+    "\n",
+    "result_1_2 = activity_1_2(df_ratings)\n",
+    "print(\"There are\", result_1_2, \"user id in the database\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Safe Notebook versioning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +335,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 2554 bytes to result.py\n"
+      "[NbConvertApp] Writing 2995 bytes to result.py\n"
      ]
     }
    ],
