--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -322,6 +322,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 1.3 What is the distribution of the notes provided?\n",
+    "     **Bonus**: create a histogram."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Safe Notebook versioning"
    ]
   },
