--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -31,14 +31,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary modules\n",
     "\n",
     "from pyspark.sql import SparkSession\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from pyspark.sql.functions import col"
    ]
   },
   {
@@ -418,12 +419,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 1.4 Finally, we want to obtain a table of frequencies to express the distribution of notes as a percentage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ratings frequencies\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 26:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------------------+\n",
+      "|rating|         percentage|\n",
+      "+------+-------------------+\n",
+      "|     0|0.03049713587396543|\n",
+      "|     1| 1.1736513428507551|\n",
+      "|     2| 1.0009789472084811|\n",
+      "|     3| 1.6808154565128208|\n",
+      "|     4| 3.0598069455327663|\n",
+      "|     5|  7.569693009969633|\n",
+      "|     6| 13.063844288787255|\n",
+      "|     7| 22.431131823598488|\n",
+      "|     8|  24.10966813472571|\n",
+      "|     9| 14.120499501843938|\n",
+      "|    10| 11.759413413096187|\n",
+      "+------+-------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_1_4(df_ratings):\n",
+    "    \"\"\" Added column count which represents the number of voters\n",
+    "        by notes.\n",
+    "        Added a percentage column,\n",
+    "        which is a transformation of the count column into a percentage.\n",
+    "        Selection of rating and percentage columns.\n",
+    "        Sort by rating column.\n",
+    "\n",
+    "    Args:\n",
+    "        df_ratings (Dataframe): Rating Dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_ratings.groupBy(\"rating\")\\\n",
+    "        .count()\\\n",
+    "        .withColumn(\n",
+    "            'percentage',\n",
+    "            (col(\"count\")*100)/float(df_ratings.count()))\\\n",
+    "        .select(\"rating\", \"percentage\")\\\n",
+    "        .orderBy(\"rating\")\\\n",
+    "        .show()\n",
+    "\n",
+    "\n",
+    "print(\"Ratings frequencies\")\n",
+    "activity_1_4(df_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Safe Notebook versioning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +515,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 3834 bytes to result.py\n"
+      "[NbConvertApp] Writing 4667 bytes to result.py\n"
      ]
     }
    ],
