refactor: Code quality check with flake8.

--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -502,12 +502,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Code quality check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!flake8-nb result.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Safe Notebook versioning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +531,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 4667 bytes to result.py\n"
+      "[NbConvertApp] Writing 4753 bytes to result.py\n"
      ]
     }
    ],
