--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "\n",
     "from pyspark.sql import SparkSession\n",
     "import matplotlib.pyplot as plt\n",
-    "from pyspark.sql.functions import col"
+    "from pyspark.sql.functions import col, when"
    ]
   },
   {
@@ -502,12 +502,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2. Data selection and enrichment\n",
+    "\n",
+    "- 2.1 In order to set up a certain statistical model, we must transform the `rating` note into two modalities: did the user like the film or not?\n",
+    "     Create a new `liked` column in the `ratings` table with the following values: `0` for ratings [0-6] and `1` for ratings [7-10]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated ratings Dataframe\n",
+      "+-------+--------+------+----------------+-----+\n",
+      "|user_id|movie_id|rating|rating_timestamp|liked|\n",
+      "+-------+--------+------+----------------+-----+\n",
+      "|      1|  114508|     8|      1381006850|    1|\n",
+      "|      2|  499549|     9|      1376753198|    1|\n",
+      "|      2| 1305591|     8|      1376742507|    1|\n",
+      "|      2| 1428538|     1|      1371307089|    0|\n",
+      "|      3|   75314|     1|      1595468524|    0|\n",
+      "|      3|  102926|     9|      1590148016|    1|\n",
+      "|      3|  114369|    10|      1597555347|    1|\n",
+      "|      3|  118715|     8|      1596006798|    1|\n",
+      "|      3|  120737|     8|      1599306720|    1|\n",
+      "|      3|  208092|     5|      1586466072|    0|\n",
+      "|      3|  358273|     9|      1579057827|    1|\n",
+      "|      3|  477348|     6|      1597289003|    0|\n",
+      "|      3|10039344|     5|      1578603053|    0|\n",
+      "|      3| 1051906|     6|      1589924916|    0|\n",
+      "|      3| 1568346|     6|      1597388722|    0|\n",
+      "|      3| 2278388|     8|      1597297732|    1|\n",
+      "|      3| 6199572|     3|      1589482483|    0|\n",
+      "|      3| 6723592|     8|      1599578941|    1|\n",
+      "|      3| 6751668|     9|      1578955697|    1|\n",
+      "|      3| 7131622|     8|      1579559244|    1|\n",
+      "+-------+--------+------+----------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_2_1(df_ratings):\n",
+    "    \"\"\" Added a liked column.\n",
+    "        Depending on the rating column,\n",
+    "        the liked column takes the value 0 or 1\n",
+    "\n",
+    "    Args:\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "\n",
+    "    Returns:\n",
+    "        Dataframe: Updated ratings Dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_ratings = df_ratings\\\n",
+    "        .withColumn(\n",
+    "            'liked',\n",
+    "            when(df_ratings.rating < 7, 0)\n",
+    "            .when(df_ratings.rating >= 7, 1))\n",
+    "\n",
+    "    df_ratings.show()\n",
+    "\n",
+    "    return df_ratings\n",
+    "\n",
+    "\n",
+    "print(\"Updated ratings Dataframe\")\n",
+    "df_ratings = activity_2_1(df_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Code quality check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +608,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 4753 bytes to result.py\n"
+      "[NbConvertApp] Writing 5655 bytes to result.py\n"
      ]
     }
    ],
