--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "\n",
     "from pyspark.sql import SparkSession\n",
     "import matplotlib.pyplot as plt\n",
-    "from pyspark.sql.functions import col, when"
+    "from pyspark.sql.functions import col, when, explode, split,\\\n",
+    "    desc"
    ]
   },
   {
@@ -579,14 +580,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- 2.2 Which genres are rated highest by users? We want to get the **top 10** movie genres liked by users (using the new `liked` column)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 genres\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 35:>                                                         (0 + 4) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+\n",
+      "|    genre|sum_liked|\n",
+      "+---------+---------+\n",
+      "|    Drama|   397116|\n",
+      "| Thriller|   220867|\n",
+      "|   Action|   199212|\n",
+      "|   Comedy|   169233|\n",
+      "|Adventure|   169194|\n",
+      "|    Crime|   136140|\n",
+      "|   Sci-Fi|   131233|\n",
+      "|  Romance|    92047|\n",
+      "|  Mystery|    83036|\n",
+      "|  Fantasy|    80337|\n",
+      "+---------+---------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_2_2(df_movies, df_ratings):\n",
+    "    \"\"\" Separation of genres in an array with the split function.\n",
+    "        Extract genre arrays with the explode function alias explode_genre.\n",
+    "        Selection of the movie_id and explode_genre column.\n",
+    "        Joining with ratings table on movie_id columns.\n",
+    "        Sum of the liked column by grouping on the explode_genre column.\n",
+    "        Rename sum(liked) column to sum_liked.\n",
+    "        Rename explode_genre column to genre.\n",
+    "        Sort in descending order based on the sum_liked column.\n",
+    "        Limitation to the first 10 records.\n",
+    "\n",
+    "    Args:\n",
+    "        df_movies (Dataframe): Movies Dataframe\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_movies.select(\n",
+    "        \"movie_id\",\n",
+    "        explode(\n",
+    "            split(\n",
+    "                col(\"genre\"),\n",
+    "                \"\\|\"))\n",
+    "        .alias(\"explode_genre\"))\\\n",
+    "        .join(\n",
+    "            df_ratings,\n",
+    "            df_ratings.movie_id == df_movies.movie_id,\n",
+    "            \"inner\")\\\n",
+    "        .groupBy(\"explode_genre\")\\\n",
+    "        .sum(\"liked\")\\\n",
+    "        .withColumnRenamed(\"sum(liked)\", \"sum_liked\")\\\n",
+    "        .withColumnRenamed(\"explode_genre\", \"genre\")\\\n",
+    "        .sort(desc(\"sum_liked\"))\\\n",
+    "        .limit(10)\\\n",
+    "        .show()\n",
+    "\n",
+    "\n",
+    "print(\"Top 10 genres\")\n",
+    "activity_2_2(df_movies, df_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Code quality check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.ipynb#In[43]:22:18: W605 invalid escape sequence '\\|'\n"
+     ]
+    }
+   ],
    "source": [
     "!flake8-nb result.ipynb"
    ]
@@ -600,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +713,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 5655 bytes to result.py\n"
+      "[NbConvertApp] Writing 7105 bytes to result.py\n"
      ]
     }
    ],
