feat: activity 3.1. fix: anaconda environment export

--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,12 +676,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3. Advanced Selections\n",
+    "\n",
+    "- 3.1 What are the titles of the films most popular with Internet users?\n",
+    "     We are looking for the **10** films with the best ratings on average by users, with a minimum of **5** ratings for the measurement to be relevant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 movies\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 53:>                                                         (0 + 4) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+\n",
+      "|               title|mean_rating|\n",
+      "+--------------------+-----------+\n",
+      "| Five Minutes (2017)|       10.0|\n",
+      "|Crawl Bitch Crawl...|       10.0|\n",
+      "|        Selam (2013)|       10.0|\n",
+      "| Romeo Juliet (2009)|       10.0|\n",
+      "|Third Contact (2011)|       10.0|\n",
+      "|Let There Be Ligh...|       10.0|\n",
+      "|Chasing Happiness...|       10.0|\n",
+      "|Avengers: Age of ...|       10.0|\n",
+      "|Make Like a Dog (...|       10.0|\n",
+      "|Quiet Riot: Well ...|       10.0|\n",
+      "+--------------------+-----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_3_1(df_movies, df_ratings):\n",
+    "    \"\"\" Join between movies and ratings tables,\n",
+    "        on movie_id columns, alias movies_ratings.\n",
+    "        Join with subtable alias title_count,\n",
+    "        which represents the number of votes per film.\n",
+    "        Filter on movies that have at least 5 ratings.\n",
+    "        Average ratings per movie title.\n",
+    "        Renamed avg(rating) column to mean_rating.\n",
+    "        Descending sort based on mean_rating column.\n",
+    "        Limitation to the first 10 records.\n",
+    "\n",
+    "    Args:\n",
+    "        df_movies (Dataframe): Movies Dataframe\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_movies.join(\n",
+    "        df_ratings,\n",
+    "        df_movies.movie_id == df_ratings.movie_id,\n",
+    "        \"inner\").alias(\"movies_ratings\")\\\n",
+    "        .join(\n",
+    "            (df_movies.join(\n",
+    "                df_ratings,\n",
+    "                df_movies.movie_id == df_ratings.movie_id,\n",
+    "                \"inner\")\n",
+    "                .groupBy(\"title\")\n",
+    "                .count()).alias(\"title_count\"),\n",
+    "            col(\"movies_ratings.title\") == col(\"title_count.title\"),\n",
+    "            \"inner\")\\\n",
+    "        .filter(col(\"count\") >= 5)\\\n",
+    "        .groupBy(\"movies_ratings.title\")\\\n",
+    "        .mean(\"rating\")\\\n",
+    "        .withColumnRenamed(\"avg(rating)\", \"mean_rating\")\\\n",
+    "        .sort(desc(\"mean_rating\"))\\\n",
+    "        .limit(10)\\\n",
+    "        .show()\n",
+    "\n",
+    "\n",
+    "print(\"Top 10 movies\")\n",
+    "activity_3_1(df_movies, df_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Code quality check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +814,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 7105 bytes to result.py\n"
+      "[NbConvertApp] Writing 8736 bytes to result.py\n"
      ]
     }
    ],
@@ -724,7 +825,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('test_heva')",
+   "display_name": "Python 3.10.4 ('test_heva_2')",
    "language": "python",
    "name": "python3"
   },
@@ -743,7 +844,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "64a6df10e2c5214e0607b70b4fb1785e65c456952a5c675fa786aef034d7f982"
+    "hash": "d3ff0b78e775a8235e405f2d4e61baf5b0fce9ea96366ecc5fad4d50679adb4b"
    }
   }
  },
