--- a/main/result.ipynb
+++ b/main/result.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,8 @@
     "from pyspark.sql import SparkSession\n",
     "import matplotlib.pyplot as plt\n",
     "from pyspark.sql.functions import col, when, explode, split,\\\n",
-    "    desc"
+    "    desc, from_unixtime, year\n",
+    "from pyspark.sql.types import DateType"
    ]
   },
   {
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +70,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/07/20 23:14:09 WARN Utils: Your hostname, cornichon resolves to a loopback address: 127.0.1.1; using 192.168.1.156 instead (on interface wlp3s0)\n",
+      "22/07/20 23:14:09 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      ":: loading settings :: url = jar:file:/home/matteo/anaconda3/envs/test_heva/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/matteo/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/matteo/.ivy2/jars\n",
+      "org.xerial#sqlite-jdbc added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-c7581eb6-a2d2-4ade-83eb-664fe5409d97;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound org.xerial#sqlite-jdbc;3.34.0 in central\n",
+      ":: resolution report :: resolve 805ms :: artifacts dl 3ms\n",
+      "\t:: modules in use:\n",
+      "\torg.xerial#sqlite-jdbc;3.34.0 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   1   |   0   |   0   |   0   ||   1   |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-c7581eb6-a2d2-4ade-83eb-664fe5409d97\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 1 already retrieved (0kB/9ms)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/07/20 23:14:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "def read_data(data_path):\n",
     "    \"\"\" Configuring the Pyspark session with the jdbc package\n",
@@ -122,14 +172,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Movies table\n",
+      "Movies table\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+--------+--------------------+--------------------+\n",
       "|movie_id|               title|               genre|\n",
       "+--------+--------------------+--------------------+\n",
@@ -220,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 3:>                                                          (0 + 1) / 1]\r"
+      "[Stage 2:>                                                          (0 + 1) / 1]\r"
      ]
     },
     {
@@ -275,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 9:>                                                          (0 + 1) / 1]\r"
+      "[Stage 8:>                                                          (0 + 1) / 1]\r"
      ]
     },
     {
@@ -331,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +427,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ratings distribution\n",
+      "Ratings distribution\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 15:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+------+------+\n",
       "|rating| count|\n",
       "+------+------+\n",
@@ -381,6 +457,13 @@
       "|    10|108351|\n",
       "+------+------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -425,27 +508,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ratings frequencies\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 26:>                                                         (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Ratings frequencies\n",
       "+------+-------------------+\n",
       "|rating|         percentage|\n",
       "+------+-------------------+\n",
@@ -462,13 +532,6 @@
       "|    10| 11.759413413096187|\n",
       "+------+-------------------+\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -511,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +662,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 35:>                                                         (0 + 4) / 4]\r"
+      "[Stage 30:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
@@ -684,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +761,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 53:>                                                         (0 + 4) / 4]\r"
+      "[Stage 48:>                                                         (0 + 4) / 4]\r"
      ]
     },
     {
@@ -777,19 +840,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Code quality check"
+    "- 3.2 What is the most rated film in 2020?\n",
+    "     **Note**: the `rating_timestamp` column is provided in the database as [Unix time](https://fr.wikipedia.org/wiki/Heure_Unix)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result.ipynb#In[43]:22:18: W605 invalid escape sequence '\\|'\n"
+      "Best film of the year 2020\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 50:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+------------+\n",
+      "|      title|rating_count|\n",
+      "+-----------+------------+\n",
+      "|1917 (2019)|        2858|\n",
+      "+-----------+------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "def activity_3_2(df_movies, df_ratings):\n",
+    "    \"\"\" Adding a rating_year column,\n",
+    "        which corresponds to the year in which the vote was recorded.\n",
+    "        Join movies and ratings tables on movie_id columns.\n",
+    "        Counting the number of votes per film title.\n",
+    "        Sort descending in order of count.\n",
+    "        Rename column count to rating_count.\n",
+    "        Limitation to the first record.\n",
+    "\n",
+    "    Args:\n",
+    "        df_movies (Dataframe): Movies Dataframe\n",
+    "        df_ratings (Dataframe): Ratings Dataframe\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_ratings\\\n",
+    "        .withColumn(\n",
+    "            'rating_year',\n",
+    "            year(\n",
+    "                from_unixtime('rating_timestamp')\n",
+    "                .cast(DateType())))\\\n",
+    "        .join(\n",
+    "            df_movies,\n",
+    "            df_ratings.movie_id == df_movies.movie_id)\\\n",
+    "        .filter(col(\"rating_year\") == 2020)\\\n",
+    "        .groupBy(\"title\")\\\n",
+    "        .count()\\\n",
+    "        .sort(desc(\"count\"))\\\n",
+    "        .withColumnRenamed(\"count\", \"rating_count\")\\\n",
+    "        .limit(1)\\\n",
+    "        .show()\n",
+    "\n",
+    "\n",
+    "print(\"Best film of the year 2020\")\n",
+    "activity_3_2(df_movies, df_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code quality check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result.ipynb#In[11]:22:18: W605 invalid escape sequence '\\|'\n"
      ]
     }
    ],
@@ -806,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +961,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook result.ipynb to python\n",
-      "[NbConvertApp] Writing 8736 bytes to result.py\n"
+      "[NbConvertApp] Writing 10036 bytes to result.py\n"
      ]
     }
    ],
@@ -825,7 +972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('test_heva_2')",
+   "display_name": "Python 3.10.4 ('test_heva')",
    "language": "python",
    "name": "python3"
   },
@@ -844,7 +991,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d3ff0b78e775a8235e405f2d4e61baf5b0fce9ea96366ecc5fad4d50679adb4b"
+    "hash": "64a6df10e2c5214e0607b70b4fb1785e65c456952a5c675fa786aef034d7f982"
    }
   }
  },
